[package]
name = "qilin"
version = "0.3.2"
edition = "2021"
authors = ["DraftedDev", "Qilin Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DraftedDev/qilin"
keywords = ["game-engine", "games"]
categories = ["game-development", "game-engines", "graphics"]
exclude = ["/.github/*"]
description = """
Lightweight Game Engine for making fun 2d Games in Rust.
"""

[dependencies]
minifb = "0.24.0"
mint = "0.5.9"
image = { version = "0.24.6", optional = true, default-features = false }
serde = { version = "1.0.164", default-features = false, optional = true }
hashbrown = { version = "0.14.0", optional = true }
serde_json = { version = "1.0.85", optional = true }
kira = { version = "0.8.4", optional = true }
fontdue = { version = "0.7.3", optional = true }

[features]
default = ["store"]
# Exports internal minifb dependency
minifb = []
# Exports utility functions for converting images from the image crate to a qilin image
image = ["dep:image", "image/bmp", "image/jpeg", "image/png", "image/ico"]
# Adds serde compatibility
serde = ["dep:serde", "mint/serde", "serde/derive", "serde/std", "serde_json"]
# Adds data storing and player preferences. Also adds serde feature.
store = ["serde", "hashbrown/serde"]
# Audio functionalities
audio = ["dep:kira"]
# Text and Font rendering
text = ["dep:fontdue"]

[[example]]
name = "shapes"
path = "examples/shapes.rs"
harness = false

[[example]]
name = "text"
path = "examples/text.rs"
harness = false

[[example]]
name = "move"
path = "examples/move.rs"
harness = false

[[example]]
name = "prefs"
path = "examples/prefs.rs"
harness = false

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
harness = false

[[example]]
name = "click_and_hover"
path = "examples/click_and_hover.rs"
harness = false
